[gd_scene load_steps=15 format=3 uid="uid://c5ctnxwkly676"]

[ext_resource type="Material" uid="uid://dhxq4c1h52vu2" path="res://assets/materials/basic materials/green.tres" id="1_c6ntn"]
[ext_resource type="Script" path="res://scripts/heal_debug.gd" id="2_bklun"]
[ext_resource type="Material" uid="uid://bce1wgnyr3dmg" path="res://assets/materials/basic materials/red.tres" id="3_u7l4p"]
[ext_resource type="Material" uid="uid://otsc4ndmv37v" path="res://assets/materials/basic materials/purple.tres" id="4_t5ewl"]
[ext_resource type="Script" path="res://scripts/stun_debug.gd" id="5_wahp8"]
[ext_resource type="Material" uid="uid://bje11o171j0bm" path="res://assets/materials/basic materials/yellow.tres" id="6_5qd38"]
[ext_resource type="Script" path="res://scenes/stamina_debug.gd" id="7_7sjxx"]
[ext_resource type="Script" path="res://scenes/fear_debug.gd" id="8_6sp1s"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3yqwc"]
height = 2.32076
radius = 1.59544

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gyaca"]
height = 2.24902
radius = 1.51864

[sub_resource type="CylinderShape3D" id="CylinderShape3D_awg8c"]
radius = 1.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hx5f4"]
radius = 1.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_e2uue"]
radius = 1.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kayyw"]
radius = 1.5

[node name="Debug Buttons" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -40.6601, 0, -42.7887)

[node name="Health" type="Node3D" parent="."]

[node name="Heal" type="CSGCylinder3D" parent="Health"]
transform = Transform3D(0.99993, 0, 0.011868, 0, 1, 0, -0.011868, 0, 0.99993, -1.27248, 0, -0.413723)
material_override = ExtResource("1_c6ntn")
radius = 1.5

[node name="HealBox" type="Area3D" parent="Health/Heal"]
script = ExtResource("2_bklun")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Health/Heal/HealBox"]
shape = SubResource("CylinderShape3D_3yqwc")

[node name="Hurt" type="CSGCylinder3D" parent="Health"]
transform = Transform3D(0.99993, 0, 0.011868, 0, 1, 0, -0.011868, 0, 0.99993, 4.08059, 0, -0.413723)
material_override = ExtResource("3_u7l4p")
radius = 1.5

[node name="HurtBox" type="Area3D" parent="Health/Hurt"]
script = ExtResource("2_bklun")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Health/Hurt/HurtBox"]
transform = Transform3D(0.999994, 0, 0, 0, 0.999994, 0, 0, 0, 0.999994, 0, 0, 0)
shape = SubResource("CylinderShape3D_gyaca")

[node name="Stun" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.2385, 0, 0)

[node name="StunHeal" type="CSGCylinder3D" parent="Stun"]
transform = Transform3D(0.99993, 0, 0.011868, 0, 1, 0, -0.011868, 0, 0.99993, -1.27248, 0, -0.413723)
material_override = ExtResource("4_t5ewl")
radius = 1.5

[node name="StunHealBox" type="Area3D" parent="Stun/StunHeal"]
script = ExtResource("5_wahp8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stun/StunHeal/StunHealBox"]
shape = SubResource("CylinderShape3D_3yqwc")

[node name="StunHurt" type="CSGCylinder3D" parent="Stun"]
transform = Transform3D(0.99993, 0, 0.011868, 0, 1, 0, -0.011868, 0, 0.99993, 4.08059, 0, -0.413723)
material_override = ExtResource("3_u7l4p")
radius = 1.5

[node name="StunHurtBox" type="Area3D" parent="Stun/StunHurt"]
script = ExtResource("5_wahp8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stun/StunHurt/StunHurtBox"]
transform = Transform3D(0.999994, 0, 0, 0, 0.999994, 0, 0, 0, 0.999994, 0, 0, 0)
shape = SubResource("CylinderShape3D_gyaca")

[node name="Stamina" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.4693, 0, 0)

[node name="StaminaHeal" type="CSGCylinder3D" parent="Stamina"]
material_override = ExtResource("6_5qd38")
radius = 1.5

[node name="StaminaHealBox" type="Area3D" parent="Stamina/StaminaHeal"]
script = ExtResource("7_7sjxx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stamina/StaminaHeal/StaminaHealBox"]
shape = SubResource("CylinderShape3D_awg8c")

[node name="StaminaHurt" type="CSGCylinder3D" parent="Stamina"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.95282, 0, 0)
material_override = ExtResource("3_u7l4p")
radius = 1.5

[node name="StaminaHurtBox" type="Area3D" parent="Stamina/StaminaHurt"]
script = ExtResource("7_7sjxx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stamina/StaminaHurt/StaminaHurtBox"]
shape = SubResource("CylinderShape3D_hx5f4")

[node name="Fear" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.9858, 0, 0)

[node name="FearHeal" type="CSGCylinder3D" parent="Fear"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07427, 0, 0)
radius = 1.5

[node name="FearHealBox" type="Area3D" parent="Fear/FearHeal"]
script = ExtResource("8_6sp1s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fear/FearHeal/FearHealBox"]
shape = SubResource("CylinderShape3D_e2uue")

[node name="FearHurt" type="CSGCylinder3D" parent="Fear"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.46621, 0, 0)
radius = 1.5

[node name="FearHurtBox" type="Area3D" parent="Fear/FearHurt"]
script = ExtResource("8_6sp1s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fear/FearHurt/FearHurtBox"]
shape = SubResource("CylinderShape3D_kayyw")

[connection signal="body_entered" from="Health/Heal/HealBox" to="Health/Heal/HealBox" method="_on_heal_entered"]
[connection signal="body_exited" from="Health/Heal/HealBox" to="Health/Heal/HealBox" method="_on_body_exited"]
[connection signal="body_entered" from="Health/Hurt/HurtBox" to="Health/Hurt/HurtBox" method="_on_hurt_entered"]
[connection signal="body_exited" from="Health/Hurt/HurtBox" to="Health/Hurt/HurtBox" method="_on_body_exited"]
[connection signal="body_entered" from="Stun/StunHeal/StunHealBox" to="Stun/StunHeal/StunHealBox" method="_on_heal_entered"]
[connection signal="body_exited" from="Stun/StunHeal/StunHealBox" to="Stun/StunHeal/StunHealBox" method="_on_body_exited"]
[connection signal="body_entered" from="Stun/StunHurt/StunHurtBox" to="Stun/StunHurt/StunHurtBox" method="_on_hurt_entered"]
[connection signal="body_exited" from="Stun/StunHurt/StunHurtBox" to="Stun/StunHurt/StunHurtBox" method="_on_body_exited"]
[connection signal="body_entered" from="Stamina/StaminaHeal/StaminaHealBox" to="Stamina/StaminaHeal/StaminaHealBox" method="_on_heal_entered"]
[connection signal="body_exited" from="Stamina/StaminaHeal/StaminaHealBox" to="Stamina/StaminaHeal/StaminaHealBox" method="_on_body_exited"]
[connection signal="body_entered" from="Stamina/StaminaHurt/StaminaHurtBox" to="Stamina/StaminaHurt/StaminaHurtBox" method="_on_hurt_entered"]
[connection signal="body_exited" from="Stamina/StaminaHurt/StaminaHurtBox" to="Stamina/StaminaHurt/StaminaHurtBox" method="_on_body_exited"]
[connection signal="body_entered" from="Fear/FearHeal/FearHealBox" to="Fear/FearHeal/FearHealBox" method="_on_heal_entered"]
[connection signal="body_entered" from="Fear/FearHurt/FearHurtBox" to="Fear/FearHurt/FearHurtBox" method="_on_hurt_entered"]
